[appBuilder] 多版本和结构优化