@@ -7,27 +7,27 @@
 package modelengine.fit.jober.aipp.service;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyBoolean;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isNull;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import modelengine.fit.dynamicform.DynamicFormService;
 import modelengine.fit.jane.common.entity.OperationContext;
-import modelengine.fit.jane.meta.multiversion.MetaInstanceService;
-import modelengine.fit.jane.meta.multiversion.MetaService;
-import modelengine.fit.jane.meta.multiversion.definition.Meta;
-import modelengine.fit.jane.meta.multiversion.definition.MetaFilter;
-import modelengine.fit.jane.meta.multiversion.instance.Instance;
-import modelengine.fit.jober.aipp.common.exception.AippErrCode;
 import modelengine.fit.jober.aipp.common.exception.AippParamException;
 import modelengine.fit.jober.aipp.constants.AippConst;
+import modelengine.fit.jober.aipp.domains.log.repository.AippLogRepository;
+import modelengine.fit.jober.aipp.domains.task.AppTask;
+import modelengine.fit.jober.aipp.domains.task.service.AppTaskService;
+import modelengine.fit.jober.aipp.domains.taskinstance.AppTaskInstance;
+import modelengine.fit.jober.aipp.domains.taskinstance.service.AppTaskInstanceService;
 import modelengine.fit.jober.aipp.dto.aipplog.AippInstLogDataDto;
 import modelengine.fit.jober.aipp.dto.aipplog.AippLogCreateDto;
 import modelengine.fit.jober.aipp.dto.chat.AppChatRsp;
@@ -41,16 +41,13 @@ import modelengine.fit.jober.aipp.mapper.AippChatMapper;
 import modelengine.fit.jober.aipp.mapper.AippLogMapper;
 import modelengine.fit.jober.aipp.service.impl.AippLogServiceImpl;
 import modelengine.fit.jober.aipp.service.impl.AopAippLogServiceImpl;
-import modelengine.fit.jober.aipp.util.JsonUtils;
 import modelengine.fit.jober.aipp.util.SensitiveFilterTools;
-import modelengine.fit.jober.common.RangeResult;
 import modelengine.fit.jober.common.RangedResultSet;
+
 import modelengine.fitframework.util.MapBuilder;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -58,6 +55,7 @@ import org.junit.jupiter.params.provider.MethodSource;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDateTime;
@@ -70,54 +68,44 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import java.util.stream.LongStream;
 import java.util.stream.Stream;
 
 @ExtendWith(MockitoExtension.class)
 public class AippLogServiceTest {
     private static final String DUMMY_ID = "someRandomId";
-
     private static final String DUMMY_AIPP_TYPE = "normal";
-
     private static final String DUMMY_VERSION = "1.0.0";
-
     private static final String DUMMY_LOG_MSG = "some random log message";
-
     private static final String DUMMY_ACCOUNT = "z00000001";
-
     private static final String DUMMY_META_VERSION_NEW = "1.0.1";
-
     private static final String DUMMY_PATH = "/123";
 
     @InjectMocks
     private AippLogServiceImpl aippLogService;
-
     @InjectMocks
     private AopAippLogServiceImpl aopAippLogService;
-
     @Mock
     private AippLogMapper aippLogMapperMock;
-
     @Mock
     private AippChatMapper aippChatMapperMock;
-
     @Mock
-    private MetaInstanceService metaInstanceServiceMock;
-
+    private DynamicFormService dynamicFormServiceMock;
     @Mock
     private UploadedFileManageService uploadedFileManageServiceMock;
-
-    @Mock
-    private MetaService metaServiceMock;
-
     @Mock
     private SensitiveFilterTools sensitiveFilterTools;
+    @Mock
+    private AppTaskInstanceService appTaskInstanceService;
+    @Mock
+    private AppTaskService appTaskService;
+    @Mock
+    private AippLogRepository aippLogRepository;
 
     private AtomicLong logId;
-
     private Function<AippInstLogType, AippInstLog> generateAippInstLogFunc;
 
     static Stream<AippLogCreateDto> invalidAippLogCreateDtoCreatorForTest() {
@@ -170,16 +158,9 @@ public class AippLogServiceTest {
         };
     }
 
-    private void mockMta() {
-        Meta expectMeta = GenerateInactiveMeta();
-        when(this.metaServiceMock.list(any(MetaFilter.class),
-                eq(false),
-                eq(0L),
-                eq(10),
-                any(OperationContext.class))).thenReturn(RangedResultSet.create(Collections.singletonList(expectMeta),
-                0L,
-                10,
-                1L));
+    private void mockTask() {
+        AppTask task = generateTask();
+        when(this.appTaskService.getTasksByAppId(any(), any(), any())).thenReturn(List.of(task));
     }
 
     @Test
@@ -203,23 +184,16 @@ public class AippLogServiceTest {
     void shouldDeleteWhenCallDeleteLogWithLastNotRunning() {
         final String dummyAippInstanceStatus = MetaInstStatusEnum.ARCHIVED.name();
         final String dummyInstId = DUMMY_LOG_MSG;
-        this.mockMta();
-        RangedResultSet<Instance> metaInstanceResult = new RangedResultSet<>();
-        metaInstanceResult.setRange(new RangeResult(0, 1, 1));
-        metaInstanceResult.setResults(Collections.singletonList(new Instance(dummyInstId,
-                Collections.singletonMap(AippConst.INST_STATUS_KEY, dummyAippInstanceStatus),
-                null)));
+        this.mockTask();
         when(this.aippLogMapperMock.selectNormalInstanceIdOrderByTimeDesc(eq(Collections.singletonList(DUMMY_ID)),
                 eq(AippTypeEnum.getType(DUMMY_AIPP_TYPE).type()),
                 eq(OperationContextDummy.DUMMY_ACCOUNT))).thenReturn(Collections.singletonList(dummyInstId));
-        when(this.metaInstanceServiceMock.getMetaVersionId(any())).thenReturn(DUMMY_ID);
-        when(this.metaInstanceServiceMock.list(anyList(),
-                eq(0L),
-                eq(1),
-                argThat(OperationContextDummy::operationContextDummyMatcher))).thenReturn(metaInstanceResult);
+        when(this.appTaskInstanceService.getTaskId(any())).thenReturn(DUMMY_ID);
+        when(this.appTaskInstanceService.getInstance(any(), any(), any())).thenReturn(Optional.of(
+                AppTaskInstance.asEntity().setInstanceId(dummyInstId).setStatus(dummyAippInstanceStatus).build()));
         aippLogService.deleteAippInstLog(DUMMY_ID, DUMMY_AIPP_TYPE, OperationContextDummy.getDummy());
         verify(aippLogMapperMock, times(1)).selectNormalInstanceIdOrderByTimeDesc(any(), any(), any());
-        verify(metaInstanceServiceMock, times(1)).list(anyList(), anyLong(), anyInt(), any());
+        verify(appTaskInstanceService, times(1)).getInstance(any(), any(), any());
         verify(uploadedFileManageServiceMock, times(1)).cleanAippFiles(any());
         verify(aippLogMapperMock, times(1)).delete(eq(Collections.singletonList(DUMMY_ID)),
                 eq(AippTypeEnum.getType(AippTypeEnum.NORMAL.name()).type()),
@@ -227,44 +201,33 @@ public class AippLogServiceTest {
                 isNull());
     }
 
-    Meta GenerateInactiveMeta() {
-        LocalDateTime createTime = LocalDateTime.now();
-        LocalDateTime modifyTime = LocalDateTime.now();
-        Meta expectMeta = new Meta();
-        expectMeta.setName("testName");
-        expectMeta.setId(DUMMY_ID);
-        expectMeta.setVersion(DUMMY_META_VERSION_NEW);
-        expectMeta.setCreator("testUser");
-        expectMeta.setCreationTime(createTime);
-        expectMeta.setLastModificationTime(modifyTime);
-        Map<String, Object> attribute = new HashMap<>();
-        attribute.put(AippConst.ATTR_AIPP_TYPE_KEY, AippTypeEnum.getType(DUMMY_AIPP_TYPE).type());
-        attribute.put(AippConst.ATTR_APP_ID_KEY, DUMMY_ID);
-        expectMeta.setAttributes(attribute);
-        return expectMeta;
+    AppTask generateTask() {
+        return AppTask.asEntity()
+                .setName("testName")
+                .setAppSuiteId(DUMMY_ID)
+                .setVersion(DUMMY_META_VERSION_NEW)
+                .setCreator("testUser")
+                .setCreationTime(LocalDateTime.now())
+                .setLastModificationTime(LocalDateTime.now())
+                .setAippType(AippTypeEnum.getType(DUMMY_AIPP_TYPE).type())
+                .setAppId(DUMMY_ID)
+                .build();
     }
 
     @Test
     void shouldNotDeleteWhenCallDeleteLogWithLastRunning() {
         final String dummyAippInstanceStatus = MetaInstStatusEnum.RUNNING.name();
         final String dummyInstId = DUMMY_LOG_MSG;
-        this.mockMta();
-        RangedResultSet<Instance> metaInstanceResult = new RangedResultSet<>();
-        metaInstanceResult.setRange(new RangeResult(0, 1, 1));
-        metaInstanceResult.setResults(Collections.singletonList(new Instance(dummyInstId,
-                Collections.singletonMap(AippConst.INST_STATUS_KEY, dummyAippInstanceStatus),
-                null)));
+        this.mockTask();
         when(this.aippLogMapperMock.selectNormalInstanceIdOrderByTimeDesc(eq(Collections.singletonList(DUMMY_ID)),
                 eq(AippTypeEnum.getType(DUMMY_AIPP_TYPE).type()),
                 eq(OperationContextDummy.DUMMY_ACCOUNT))).thenReturn(Collections.singletonList(dummyInstId));
-        when(this.metaInstanceServiceMock.getMetaVersionId(any())).thenReturn(DUMMY_ID);
-        when(this.metaInstanceServiceMock.list(anyList(),
-                eq(0L),
-                eq(1),
-                argThat(OperationContextDummy::operationContextDummyMatcher))).thenReturn(metaInstanceResult);
+        when(this.appTaskInstanceService.getTaskId(any())).thenReturn(DUMMY_ID);
+        when(this.appTaskInstanceService.getInstance(any(), any(), any())).thenReturn(Optional.of(
+                AppTaskInstance.asEntity().setInstanceId(dummyInstId).setStatus(dummyAippInstanceStatus).build()));
         aippLogService.deleteAippInstLog(DUMMY_ID, DUMMY_AIPP_TYPE, OperationContextDummy.getDummy());
         verify(aippLogMapperMock, times(1)).selectNormalInstanceIdOrderByTimeDesc(any(), any(), any());
-        verify(metaInstanceServiceMock, times(1)).list(anyList(), anyLong(), anyInt(), any());
+        verify(appTaskInstanceService, times(1)).getInstance(any(), any(), any());
         verify(aippLogMapperMock, times(1)).delete(eq(Collections.singletonList(DUMMY_ID)),
                 eq(AippTypeEnum.NORMAL.name()),
                 eq(OperationContextDummy.DUMMY_ACCOUNT),
@@ -274,13 +237,13 @@ public class AippLogServiceTest {
 
     @Test
     void shouldDoNothingWhenCallDeleteLogWithNoInstId() {
-        this.mockMta();
+        this.mockTask();
         when(aippLogMapperMock.selectNormalInstanceIdOrderByTimeDesc(eq(Collections.singletonList(DUMMY_ID)),
                 eq(AippTypeEnum.getType(DUMMY_AIPP_TYPE).type()),
                 eq(OperationContextDummy.DUMMY_ACCOUNT))).thenReturn(Collections.emptyList());
         aippLogService.deleteAippInstLog(DUMMY_ID, DUMMY_AIPP_TYPE, OperationContextDummy.getDummy());
         verify(aippLogMapperMock, times(1)).selectNormalInstanceIdOrderByTimeDesc(any(), any(), any());
-        verify(metaInstanceServiceMock, never()).list(any(), any(), anyLong(), anyInt(), any());
+        verify(appTaskInstanceService, never()).getInstance(any(), any(), any());
         verify(aippLogMapperMock, never()).delete(any(), any(), any(), any());
     }
 
@@ -342,142 +305,13 @@ public class AippLogServiceTest {
     }
 
     @Test
-    @Disabled
-    void shouldSuccessWhenQueryAippRecentInstLog() {
-        final String dummyFormId = "form id";
-        final String dummyFormVersion = "form version";
-        final String dummyFormArgs = "{\"key\": \"form args\"}";
-        final String dummyFormData = "{\"key\": \"form data\"}";
-        final String dummyAippInstanceStatus = MetaInstStatusEnum.ARCHIVED.name();
-        Map<String, Object> dummyFormObject = new HashMap<String, Object>() {{
-            put("form_args", dummyFormArgs);
-            put("form_data", dummyFormData);
-        }};
-        AippLogData dummyLogData =
-                new AippLogData(dummyFormId, dummyFormVersion, dummyFormArgs, "", null, null, new HashMap<>());
-        String dummyLogDataJson = JsonUtils.toJsonString(dummyLogData);
-        RangedResultSet<Instance> metaInstanceResult = new RangedResultSet<>();
-        metaInstanceResult.setRange(new RangeResult(0, 1, 1));
-        metaInstanceResult.setResults(Collections.singletonList(new Instance(DUMMY_ID,
-                Collections.singletonMap(AippConst.INST_STATUS_KEY, dummyAippInstanceStatus),
-                null)));
-
-        List<AippInstLog> dummyAippInstLog = Stream.of(AippInstLogType.MSG, AippInstLogType.FORM, AippInstLogType.ERROR)
-                .map(generateAippInstLogFunc)
-                .peek(logData -> logData.setAippId(DUMMY_ID))
-                .peek(logData -> logData.setInstanceId(DUMMY_ID))
-                .peek(logData -> logData.setLogData(dummyLogDataJson))
-                .collect(Collectors.toList());
-        when(aippLogMapperMock.selectRecentByAippId(eq(DUMMY_ID),
-                eq(DUMMY_AIPP_TYPE),
-                eq(OperationContextDummy.DUMMY_ACCOUNT))).thenReturn(dummyAippInstLog);
-        when(metaInstanceServiceMock.list(eq(DUMMY_ID),
-                argThat(filter -> filter.getIds().size() == 1 && filter.getIds().get(0).equals(DUMMY_ID)),
-                eq(0L),
-                eq(1),
-                argThat(OperationContextDummy::operationContextDummyMatcher))).thenReturn(metaInstanceResult);
-
-        List<AippInstLogDataDto> result =
-                aippLogService.queryAippRecentInstLog(DUMMY_ID, DUMMY_AIPP_TYPE, OperationContextDummy.getDummy());
-        Assertions.assertEquals(1, result.size());
-        AippInstLogDataDto logDto = result.get(0);
-        Assertions.assertEquals(DUMMY_ID, logDto.getAippId());
-        Assertions.assertEquals(DUMMY_ID, logDto.getInstanceId());
-        Assertions.assertEquals(dummyAippInstanceStatus, logDto.getStatus());
-        Assertions.assertEquals(dummyAippInstLog.size(), logDto.getInstanceLogBodies().size());
-        Assertions.assertTrue(logDto.getInstanceLogBodies()
-                .stream()
-                .filter(l -> l.getLogData().equals(AippInstLogType.FORM.name()))
-                .allMatch(l -> l.getLogData().equals(JsonUtils.toJsonString(dummyFormObject))));
-        // 检查log是否成功排序
-        List<Long> logIdSequence = logDto.getInstanceLogBodies()
-                .stream()
-                .map(AippInstLogDataDto.AippInstanceLogBody::getLogId)
-                .collect(Collectors.toList());
-        Assertions.assertIterableEquals(logIdSequence.stream().sorted().collect(Collectors.toList()), logIdSequence);
-        verify(aippLogMapperMock, times(1)).selectRecentByAippId(eq(DUMMY_ID),
-                eq(DUMMY_AIPP_TYPE),
-                eq(OperationContextDummy.DUMMY_ACCOUNT));
-        verify(metaInstanceServiceMock, times(1)).list(any(), any(), anyLong(), anyInt(), any());
-    }
-
-    @Test
     void shouldReturnEmptyListWhenQueryAippRecentInstLogWithDbReturnNull() {
-        this.mockMta();
+        this.mockTask();
         Assertions.assertTrue(aippLogService.queryAippRecentInstLog(DUMMY_ID,
                 DUMMY_AIPP_TYPE,
                 OperationContextDummy.getDummy()).isEmpty());
-        verify(metaInstanceServiceMock, never()).list(any(), any(), anyLong(), anyInt(), any());
-    }
-
-    @Test
-    @Disabled
-    void shouldSortedWhenQueryAippRecentInstLog() {
-        final long instanceCount = 2L;
-        final long logCountPerInstance = 3L;
-        final AippInstLogType msgType = AippInstLogType.MSG;
-
-        final String dummyAippInstanceStatus = MetaInstStatusEnum.ARCHIVED.name();
-        final LocalDateTime createTimestamp = LocalDateTime.of(2000, 1, 1, 0, 0);
-        final List<String> dummyInstIdList =
-                LongStream.rangeClosed(1, instanceCount).mapToObj(String::valueOf).collect(Collectors.toList());
-        List<AippInstLog> dummyAippInstLog = Stream.generate(() -> msgType)
-                .limit(instanceCount * logCountPerInstance)
-                .map(generateAippInstLogFunc)
-                .peek(l -> l.setAippId(DUMMY_ID))
-                .peek(l -> l.setCreateAt(createTimestamp))
-                .peek(l -> l.setCreateUserAccount(DUMMY_ACCOUNT))
-                .peek(l -> l.setInstanceId(dummyInstIdList.get((int) ((l.getLogId() - 1) / logCountPerInstance))))
-                .collect(Collectors.toList());
-        Collections.shuffle(dummyAippInstLog);  // 打乱
-        when(aippLogMapperMock.selectRecentByAippId(eq(DUMMY_ID),
-                eq(DUMMY_AIPP_TYPE),
-                eq(OperationContextDummy.DUMMY_ACCOUNT))).thenReturn(dummyAippInstLog);
-        RangedResultSet<Instance> metaInstanceResult =
-                new RangedResultSet<>(Collections.singletonList(new Instance(null,
-                        Collections.singletonMap(AippConst.INST_STATUS_KEY, dummyAippInstanceStatus),
-                        null)), new RangeResult(0, 1, 1));
-        when(metaInstanceServiceMock.list(eq(DUMMY_ID),
-                argThat(filter -> filter.getIds().size() == 1 && dummyInstIdList.contains(filter.getIds().get(0))),
-                eq(0L),
-                eq(1),
-                argThat(OperationContextDummy::operationContextDummyMatcher))).thenReturn(metaInstanceResult);
-        this.mockMta();
-        when(this.aippLogMapperMock.selectRecentInstanceIdByAippIds(any(), any(), anyInt(), any())).thenReturn(
-                dummyInstIdList);
-        List<AippInstLogDataDto> result =
-                aippLogService.queryAippRecentInstLog(DUMMY_ID, DUMMY_AIPP_TYPE, OperationContextDummy.getDummy());
-        Assertions.assertEquals(instanceCount, result.size());
-        Assertions.assertIterableEquals(dummyInstIdList,
-                result.stream().map(AippInstLogDataDto::getInstanceId).collect(Collectors.toList()));
-        for (AippInstLogDataDto logDto : result) {
-            Assertions.assertEquals(DUMMY_ID, logDto.getAippId());
-            Assertions.assertEquals(dummyAippInstanceStatus, logDto.getStatus());
-            Assertions.assertEquals(logCountPerInstance, logDto.getInstanceLogBodies().size());
-            Assertions.assertTrue(logDto.getInstanceLogBodies()
-                    .stream()
-                    .allMatch(l -> l.getLogType().equals(msgType.name()) && l.getCreateAt().equals(createTimestamp)
-                            && l.getCreateUserAccount().equals(DUMMY_ACCOUNT)));
-            // 检查log内部是否成功排序
-            List<Long> logIdSequence = logDto.getInstanceLogBodies()
-                    .stream()
-                    .map(AippInstLogDataDto.AippInstanceLogBody::getLogId)
-                    .collect(Collectors.toList());
-            Assertions.assertIterableEquals(logIdSequence.stream().sorted().collect(Collectors.toList()),
-                    logIdSequence);
-        }
-        verify(aippLogMapperMock, times(1)).selectRecentByAippId(eq(DUMMY_ID),
-                eq(DUMMY_AIPP_TYPE),
-                eq(OperationContextDummy.DUMMY_ACCOUNT));
-        verify(metaInstanceServiceMock, times(1)).list(any(), any(), anyLong(), anyInt(), any());
-    }
-
-    @Test
-    @DisplayName("测试queryLogsByInstanceIdAndLogTypes方法")
-    void testQueryLogsByInstanceIdAndLogTypes() {
-        AippParamException exception = Assertions.assertThrows(AippParamException.class,
-                () -> this.aippLogService.queryLogsByInstanceIdAndLogTypes("", new ArrayList<>()));
-        Assertions.assertEquals(AippErrCode.INPUT_PARAM_IS_INVALID.getErrorCode(), exception.getCode());
+        verify(dynamicFormServiceMock, never()).queryFormDetailByPrimaryKey(any(), any(), any());
+        verify(this.appTaskInstanceService, never()).getInstance(any(), any(), any());
     }
 
     @Test
@@ -497,43 +331,62 @@ public class AippLogServiceTest {
 
     @Test
     void shouldOkWhenCallQueryChatRecentChatLog() {
-        List<AippInstLog> aippInstLogList = generateAippInstLogList();
         List<String> instanceIds = new ArrayList<>(Arrays.asList("1", "2", "3"));
         when(this.aippChatMapperMock.selectInstanceByChat(any(), any())).thenReturn(instanceIds);
-        when(this.aippLogService.queryBatchAndFilterFullLogsByLogType(instanceIds, any())).thenReturn(aippInstLogList);
+        when(this.appTaskInstanceService.getTaskId(any())).thenReturn("testMetaId");
+        AppTaskInstance appTaskInstance1 = spy(AppTaskInstance.asEntity().setInstanceId("1").build());
+        AppTaskInstance appTaskInstance2 = spy(AppTaskInstance.asEntity().setInstanceId("2").build());
+        AppTaskInstance appTaskInstance3 = spy(AppTaskInstance.asEntity().setInstanceId("3").build());
+        AppTask appTask = AppTask.asEntity().setTaskId("version1").setAppId("app1").build();
+        when(this.appTaskService.getTasksByAppId(any(), any())).thenReturn(List.of(appTask));
+        when(this.appTaskInstanceService.getInstance(anyString(), eq("1"), any(OperationContext.class))).thenReturn(
+            Optional.of(appTaskInstance1));
+        when(this.appTaskInstanceService.getInstance(anyString(), eq("2"), any(OperationContext.class))).thenReturn(
+            Optional.of(appTaskInstance2));
+        when(this.appTaskInstanceService.getInstance(anyString(), eq("3"), any(OperationContext.class))).thenReturn(
+            Optional.of(appTaskInstance3));
+        when(this.appTaskService.getTasks(any(), any())).thenReturn(RangedResultSet.create(List.of(appTask), 0, 1, 1));
+        MockedStatic<AppTaskInstance> mockedStatic = mockStatic(AppTaskInstance.class);
 
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(AippConst.ATTR_APP_ID_KEY, "app1");
-        Meta meta = new Meta();
-        meta.setAttributes(attributes);
-        meta.setVersionId("version1");
-        RangedResultSet<Meta> metaRangedResultSet = new RangedResultSet<>();
-        metaRangedResultSet.setResults(Collections.singletonList(meta));
-        metaRangedResultSet.setRange(new RangeResult(0, 1, 1));
-
-        when(this.metaServiceMock.list(any(MetaFilter.class),
-                anyBoolean(),
-                anyLong(),
-                anyInt(),
-                any(OperationContext.class))).thenReturn(metaRangedResultSet);
+        AippInstLogDataDto logDataDto1 = getMockLogDataDto("1");
+        AippInstLogDataDto logDataDto2 = getMockLogDataDto("2");
+        AippInstLogDataDto logDataDto3 = getMockLogDataDto("3");
+        mockedStatic.when(() -> AppTaskInstance.toLogDataDto(appTaskInstance1)).thenReturn(Optional.of(logDataDto1));
+        mockedStatic.when(() -> AppTaskInstance.toLogDataDto(appTaskInstance2)).thenReturn(Optional.of(logDataDto2));
+        mockedStatic.when(() -> AppTaskInstance.toLogDataDto(appTaskInstance3)).thenReturn(Optional.of(logDataDto3));
 
         List<AippInstLogDataDto> list = this.aippLogService.queryChatRecentChatLog("1", "1", new OperationContext());
         Assertions.assertEquals(list.get(0).getInstanceId(), "1");
         Assertions.assertEquals(list.get(1).getInstanceId(), "2");
         Assertions.assertEquals(list.get(2).getInstanceId(), "3");
+        mockedStatic.close();
+    }
+
+    private AippInstLogDataDto getMockLogDataDto(String instanceId) {
+        AippInstLogDataDto logDataDto = mock(AippInstLogDataDto.class);
+        when(logDataDto.getCreateAt()).thenReturn(LocalDateTime.now());
+        when(logDataDto.getInstanceId()).thenReturn(instanceId);
+        when(logDataDto.getAippId()).thenReturn("aippId");
+        return logDataDto;
     }
 
     @Test
     void testQueryRecentLogsSinceResume() {
-        List<AippInstLog> aippInstLogList = generateAippInstLogList();
-        List<String> instanceIds = new ArrayList<>(Arrays.asList("1", "2", "3"));
+        List<String> instanceIds = new ArrayList<>(List.of("1"));
+        AppTaskInstance appTaskInstance = AppTaskInstance.asEntity().setInstanceId("1").build();
         when(this.aippLogMapperMock.selectRecentAfterResume(any(), any(), any())).thenReturn(instanceIds);
-        when(this.aippLogService.queryBatchAndFilterFullLogsByLogType(instanceIds, any())).thenReturn(aippInstLogList);
-        List<AippInstLogDataDto> list =
-                this.aippLogService.queryRecentLogsSinceResume("1", "1", OperationContextDummy.getDummy());
+        when(this.appTaskInstanceService.getInstance(any(), any(), any())).thenReturn(
+                Optional.of(appTaskInstance));
+        MockedStatic<AppTaskInstance> mockedStatic = mockStatic(AppTaskInstance.class);
+
+        AippInstLogDataDto logDataDto = mock(AippInstLogDataDto.class);
+        when(logDataDto.getInstanceId()).thenReturn("1");
+        mockedStatic.when(() -> AppTaskInstance.toLogDataDto(appTaskInstance)).thenReturn(Optional.of(logDataDto));
+
+        List<AippInstLogDataDto> list = this.aippLogService
+                .queryRecentLogsSinceResume("1", "1", OperationContextDummy.getDummy());
         Assertions.assertEquals(list.get(0).getInstanceId(), "1");
-        Assertions.assertEquals(list.get(1).getInstanceId(), "2");
-        Assertions.assertEquals(list.get(2).getInstanceId(), "3");
+        mockedStatic.close();
     }
 
     @Test
@@ -542,8 +395,10 @@ public class AippLogServiceTest {
         List<String> instanceIds = new ArrayList<>(Arrays.asList("1", "2", "3"));
         when(this.aippLogMapperMock.selectRecentInstanceId(any(), any(), any(), any())).thenReturn(instanceIds);
         when(this.aippLogService.queryBatchAndFilterFullLogsByLogType(instanceIds, any())).thenReturn(aippInstLogList);
-        List<AippInstLogDataDto> list =
-                this.aippLogService.queryAippRecentInstLogAfterSplice("1", "1", 3, OperationContextDummy.getDummy());
+        when(this.appTaskInstanceService.getInstance(any(), any(), any())).thenReturn(
+                Optional.of(AppTaskInstance.asEntity().setInstanceId("1").build()));
+        List<AippInstLogDataDto> list = this.aippLogService
+                .queryAippRecentInstLogAfterSplice("1", "1", 3, OperationContextDummy.getDummy());
         Assertions.assertEquals(list.get(0).getInstanceId(), "1");
         Assertions.assertEquals(list.get(1).getInstanceId(), "2");
         Assertions.assertEquals(list.get(2).getInstanceId(), "3");
@@ -551,32 +406,14 @@ public class AippLogServiceTest {
 
     List<AippInstLog> generateAippInstLogList() {
         List<AippInstLog> aippInstLogList = new ArrayList<>();
-        AippInstLog aippInstLog1 = AippInstLog.builder()
-                .aippId("1")
-                .logId(1L)
-                .instanceId("1")
-                .logType("MSG")
-                .path("/1")
-                .createAt(LocalDateTime.now())
-                .build();
+        AippInstLog aippInstLog1 = AippInstLog.builder().aippId("1").logId(1L).instanceId("1")
+                .logType("MSG").path("/1").createAt(LocalDateTime.now()).build();
         aippInstLogList.add(aippInstLog1);
-        AippInstLog aippInstLog2 = AippInstLog.builder()
-                .aippId("1")
-                .logId(2L)
-                .instanceId("2")
-                .logType("MSG")
-                .path("/2")
-                .createAt(LocalDateTime.now().plusMinutes(1))
-                .build();
+        AippInstLog aippInstLog2 = AippInstLog.builder().aippId("1").logId(2L).instanceId("2")
+                .logType("MSG").path("/2").createAt(LocalDateTime.now().plusMinutes(1)).build();
         aippInstLogList.add(aippInstLog2);
-        AippInstLog aippInstLog3 = AippInstLog.builder()
-                .aippId("1")
-                .logId(3L)
-                .instanceId("3")
-                .logType("MSG")
-                .path("/3")
-                .createAt(LocalDateTime.now().plusMinutes(2))
-                .build();
+        AippInstLog aippInstLog3 = AippInstLog.builder().aippId("1").logId(3L).instanceId("3")
+                .logType("MSG").path("/3").createAt(LocalDateTime.now().plusMinutes(2)).build();
         aippInstLogList.add(aippInstLog3);
         return aippInstLogList;
     }
@@ -594,8 +431,7 @@ public class AippLogServiceTest {
     void shouldThrowWhenCallInsertLogWithInvalidMsgData() {
         AippLogData aippLogData = AippLogData.builder().msg("你好").build();
         Map<String, Object> businessData = MapBuilder.get(() -> new HashMap<String, Object>())
-                .put(AippConst.BS_HTTP_CONTEXT_KEY, "{\"account\":\"123\"}")
-                .build();
+                .put(AippConst.BS_HTTP_CONTEXT_KEY, "{\"account\":\"123\"}").build();
         Assertions.assertThrows(NullPointerException.class,
                 () -> this.aippLogService.insertLog(AippInstLogType.MSG.name(), aippLogData, businessData));
     }
@@ -615,6 +451,7 @@ public class AippLogServiceTest {
     @Test
     void shouldOkWhenUpdateLog() {
         this.aippLogService.updateLog(123L, "logType", "logData");
-        verify(this.aippLogMapperMock, times(1)).updateDataAndType(123L, "logType", "logData");
+        verify(this.aippLogRepository, times(1))
+                .updateDataAndType(123L, "logType", "logData");
     }
 }
